fixed map being cut off by the header

--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@ label {
 }
 
 #page-content {
-	margin-top: 0px;
+	margin-top: 31px;
   margin-right: auto;
   margin-left: auto;
   position: relative;
